kong/kong-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kong-ingress-controller
  namespace: kong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingress-kong
  template:
    metadata:
      labels:
        app: ingress-kong
    spec:
      containers:
        - name: ingress-controller
          image: kong/kubernetes-ingress-controller:3.5
