kong/kong-ingress-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kong-ingress-controller
  namespace: kong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingress-kong
  template:
    metadata:
      labels:
        app: ingress-kong
    spec:
      serviceAccountName: kong-ingress-controller
      dnsPolicy: ClusterFirst
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      containers:
        - name: ingress-controller
          image: kong/kubernetes-ingress-controller:3.5
          args:
            - "--kong-admin-url=http://kong-kong-admin.kong.svc.cluster.local:8001"
            - "--publish-service=kong/kong-kong-proxy"
            - "--ingress-class=kong"
            - "--log-level=debug"
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: kong
spec:
  controller: konghq.com/ingress-controller
