kong/konga-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: konga
  namespace: kong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: konga
  template:
    metadata:
      labels:
        app: konga
    spec:
      containers:
      - name: konga
        image: pantsel/konga:latest
        ports:
        - containerPort: 1337
---
apiVersion: v1
kind: Service
metadata:
  name: konga
  namespace: kong
spec:
  selector:
    app: konga
  ports:
  - port: 1337
    targetPort: 1337
    protocol: TCP
  type: NodePort  # Có thể đổi thành ClusterIP nếu bạn có ingress
